# ERDAlchemy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: commits-convention.md  reference.md
examples/: demo.py  ecommerce.py  hr.py  university.py
examples/blog/: demo.py
examples/ecommerce/: ecommerce.py
examples/hr/: hr.py
examples/multi_schema/: multi_schema.html  multi_schema.py
examples/showcase/: showcase.py
examples/university/: university.py
src/sqlalchemy_erd/: __init__.py  cli.py  edge_routing.py  export.py  force.py  html_renderer.py  introspect.py  layered.py  layout.py  layout_select.py  render.py  renderer.py  serialization.py  star.py  theme.py
src/sqlalchemy_erd/constants/: __init__.py  geometry.py  layered.py  routing.py  styling.py
tests/: conftest.py  test_cli.py  test_edge_routing.py  test_export.py  test_filtering.py  test_generate_erd.py  test_html_renderer.py  test_introspect.py  test_layered.py  test_layout.py  test_layout_select.py  test_render.py  test_renderer.py  test_theme.py
